--- a/index.html
+++ b/index.html
@@ -403,15 +403,17 @@
                   <div class="full footer_top">
                      <div class="container">
                         <div class="row">
-                           <div class="col-sm-3">
+                           <div class="col-md-2"></div>
+                           <div class="col-md-4 col-12">
                               <div class="full f_logo">
-                                 <img src="images/footer_img.png" alt="#" />
+                                 <img src="img/logo_home_small.png" alt="#" width="200px"/>
                               </div>
                               <div class="full">
-                                 <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna strud exercitation</p>
+                                 <p>Interior styling & property makeover with most afforable price in town.</p>
                               </div>
                            </div>
-                           <div class="col-sm-3">
+                           <div class="col-md-1"></div>
+                           <div class="col-md-4 col-12">
                               <div class="full heading_footer">
                                  <h3>Menu</h3>
                               </div>
@@ -426,7 +428,7 @@
                                  </ul>
                               </div>
                            </div>
-                           <div class="col-sm-3">
+                           <!-- <div class="col-sm-4">
                               <div class="full heading_footer">
                                  <h3>Instagram</h3>
                               </div>
@@ -442,28 +444,7 @@
                                     </li>
                                  </ul>
                               </div>
-                           </div>
-                           <div class="col-md-3">
-                              <div class="full heading_footer">
-                                 <h3>Subscribe</h3>
-                              </div>
-                              <div class="full footer_form">
-                                 <form>
-                                    <fieldset>
-                                       <div class="row">
-                                          <div class="col-md-12">
-                                             <div class="full">
-                                                <input type="email" placeholder="Your Email" name="_email" />
-                                             </div>
-                                             <div class="full">
-                                                <button>Subscribe</button>
-                                             </div>
-                                          </div>
-                                       </div>
-                                    </fieldset>
-                                 </form>
-                              </div>
-                           </div>
+                           </div> -->
                            <div class="col-md-12">
                               <div class="row margin_top_50">
                                  <div class="col-md-10 offset-md-1">
@@ -513,13 +494,17 @@
                      </ul>
                   </div>
                   <div class="full text_align_center">
-                     <p>© 2020 All Rights Reserved. <a href="https://html.design">html.design</a></p>
+                     <p>© 2023 All Rights Reserved. Homis Makeover</p>
                   </div>
                </div>
             </div>
          </div>
       </div>
       <!-- end cpy -->
+
+      <a  class="whats-app" href="#" target="_blank">
+         <i class="fa fa-whatsapp my-float"></i>
+     </a>
       <!-- jQuery (necessary for Bootstrap's JavaScript) -->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
