--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Evonyee - Responsive HTML5 Template</title>
+      <title>HOMIS</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -45,34 +45,23 @@
       <div id="mySidenav" class="sidenav">
          <ul class="menu_sidebar">
             <li><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></li>
-            <li><a href="index.html">01. Home</a></li>
-            <li><a href="about.html">02. About</i></a></li>
-            <li><a href="what_we_do.html">03. What we do</a></li>
-            <li><a href="testimonial.html">04. Testimonial</a></li>
-            <li><a href="contact.html">05. Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</i></a></li>
+            <li><a href="why_us.html">Why Us</a></li>
+            <li><a href="packages.html">Packages</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
          </ul>
       </div>
       <header class="header">
          <div class="header_top">
             <div class="container">
                <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-12">
                      <div class="full">
-                        <span class="toggle_icon" style="cursor:pointer" onclick="openNav()"><img src="img/menu_icon.png" alt="#" /></span>
+                        <span class="toggle_icon mt-3" style="cursor:pointer" onclick="openNav()"><i style="color: #EBE3D5;" class="fa fa-bars fa-2x" aria-hidden="true"></i></span>
                         <div class="logo_circle">
-                           <a href="index.html"><img class="img-responsive" src="img/logo.png" alt="#" /></a>
+                           <a href="index.html"><img class="img-responsive" src="img/logo_home_small.png" width="186px" height="70px"  alt="#" /></a>
                         </div>
-                     </div>
-                  </div>
-                  <div class="col-md-8">
-                     <div class="float-right">
-                        <ul class="top_links">
-                           <li><a href="#"><img src="images/profile_icon.png" alt="#" /></a></li>
-                           <li class="searchbar">
-                              <input class="search_input" type="text" name="" placeholder="Search...">
-                              <a href="#" class="search_icon"><img src="images/search_icon.png" alt="#" /></a>
-                           </li>
-                        </ul> 
                      </div>
                   </div>
                </div>
@@ -80,6 +69,7 @@
          </div>
       </header>
       <!-- end header -->
+
       <!-- Start Banner Slider -->
       <div id="inner_pade" class="banner-slider">
          <div class="container">
@@ -93,68 +83,54 @@
          </div>
       </div>
       <!-- End Banner Slider -->
+
       <section>
          <div class="container">
              <div class="row margin_top_50">
-                                 <div class="col-md-12">
-                                    <div class="row">
-                                       <div class="col-sm-4">
-                                          <div class="full cont_info">
-                                             <i class="fa fa-map-marker"></i>
-                                             <span>Location</span>
-                                          </div>
-                                       </div>
-                                       <div class="col-sm-4">
-                                          <div class="full cont_info">
-                                             <i class="fa fa-phone"></i>
-                                             <span>Call +01 1234 567 890</span>
-                                          </div>
-                                       </div>
-                                       <div class="col-sm-4">
-                                          <div class="full cont_info">
-                                             <i class="fa fa-envelope" style="font-size: 17px;"></i>
-                                             <span>demo@gmail.com</span>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
+               <div class="col-md-12">
+                  <div class="row">
+                     <div class="col-sm-4">
+                        <div class="full cont_info">
+                           <i class="fa fa-map-marker"></i>
+                           <span>Klang Valley, Selangor <sup>MY</sup></span>
+                        </div>
+                     </div>
+                     <div class="col-sm-4">
+                        <div class="full cont_info">
+                           <i class="fa fa-phone"></i>
+                           <span>016 7173 814</span>
+                        </div>
+                     </div>
+                     <div class="col-sm-4">
+                        <div class="full cont_info">
+                           <i class="fa fa-envelope" style="font-size: 17px;"></i>
+                           <span>homismakeover@gmail.com</span>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
          </div>
       </section>
+
       <!-- section -->
       <section class="layout_padding request_form">
          <div class="container">
             <div class="row">
-
-               <div class="col-md-8 offset-md-2">
+               <div class="col-xl-8 offset-xl-2">
                   <div class="full text_align_center">
-                     <h3>Request A Call Back</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+                     <h3>QR Code</h3>
+                     <p>Scan WhatsApp or Instagram for contact</p>
                   </div>
                   <div class="full">
-                      <form class="form_main">
-                         <fieldset>
-                            <div class="row">
-                              <div class="col-md-10 offset-md-1">
-                                 <div class="full field">
-                                     <input type="text" name="name" placeholder="Your Name" required="" />
-                                 </div>
-                                 <div class="full field">
-                                     <input type="text" name="number" placeholder="Phone Number" required="" />
-                                 </div>
-                                 <div class="full field">
-                                     <input type="email" name="email" placeholder="Email" required="" />
-                                 </div>
-                                 <div class="full field">
-                                    <textarea placeholder="Message"></textarea>
-                                 </div>
-                                 <div class="full field center">
-                                    <button>Send</button>
-                                 </div>
-                              </div>
-                            </div>
-                         </fieldset>
-                      </form>
+                     <div class="row">
+                        <div class="col-xl-6 col-12 text-center">
+                           <img src="img/whatsapp_qr.png" alt="" width="250px" height="300px">
+                        </div>
+                        <div class="col-xl-6 col-12 text-center mt-xl-0 mt-4">
+                           <img src="img/instagram_qr.png" alt="" width="250px" height="300px">
+                        </div>
+                     </div>
                   </div>
                </div>
 
@@ -171,30 +147,30 @@
                   <div class="full footer_top">
                      <div class="container">
                         <div class="row">
-                           <div class="col-sm-3">
+                           <div class="col-md-2"></div>
+                           <div class="col-md-4 col-12">
                               <div class="full f_logo">
-                                 <img src="images/footer_img.png" alt="#" />
+                                 <img src="img/logo_home_small.png" alt="#" width="200px"/>
                               </div>
                               <div class="full">
-                                 <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna strud exercitation</p>
+                                 <p>Interior styling & property makeover with most afforable price in town.</p>
                               </div>
                            </div>
-                           <div class="col-sm-3">
+                           <div class="col-md-1"></div>
+                           <div class="col-md-4 col-12">
                               <div class="full heading_footer">
                                  <h3>Menu</h3>
                               </div>
                               <div class="full">
                                  <ul class="footer_link">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">What we do</a></li>
-                                    <li><a href="#">Testimonial</a></li>
-                                    <li><a href="#">Contact us</a></li>
+                                    <li><a href="index.html#home">Home</a></li>
+                                    <li><a href="index.html#aboutUs">About Us</a></li>
+                                    <li><a href="index.html#whyUs">Why Us</a></li>
+                                    <li><a href="index.html#packages">Packages</a></li>
                                  </ul>
                               </div>
                            </div>
-                           <div class="col-sm-3">
+                           <!-- <div class="col-sm-4">
                               <div class="full heading_footer">
                                  <h3>Instagram</h3>
                               </div>
@@ -210,28 +186,7 @@
                                     </li>
                                  </ul>
                               </div>
-                           </div>
-                           <div class="col-md-3">
-                              <div class="full heading_footer">
-                                 <h3>Subscribe</h3>
-                              </div>
-                              <div class="full footer_form">
-                                 <form>
-                                    <fieldset>
-                                       <div class="row">
-                                          <div class="col-md-12">
-                                             <div class="full">
-                                                <input type="email" placeholder="Your Email" name="_email" />
-                                             </div>
-                                             <div class="full">
-                                                <button>Subscribe</button>
-                                             </div>
-                                          </div>
-                                       </div>
-                                    </fieldset>
-                                 </form>
-                              </div>
-                           </div>
+                           </div> -->
                            <div class="col-md-12">
                               <div class="row margin_top_50">
                                  <div class="col-md-10 offset-md-1">
@@ -239,19 +194,19 @@
                                        <div class="col-sm-4">
                                           <div class="full cont_info">
                                              <i class="fa fa-map-marker"></i>
-                                             <span>Location</span>
+                                             <span>Klang Valley, Selangor <sup>MY</sup></span>
                                           </div>
                                        </div>
                                        <div class="col-sm-4">
                                           <div class="full cont_info">
                                              <i class="fa fa-phone"></i>
-                                             <span>Call +01 1234 567 890</span>
+                                             <span>016 7173 814</span>
                                           </div>
                                        </div>
                                        <div class="col-sm-4">
                                           <div class="full cont_info">
                                              <i class="fa fa-envelope" style="font-size: 17px;"></i>
-                                             <span>demo@gmail.com</span>
+                                             <span>homismakeover@gmail.com</span>
                                           </div>
                                        </div>
                                     </div>
@@ -266,6 +221,7 @@
          </div>
       </footer>
       <!-- end footer -->
+
       <!-- cpy -->
       <div class="cpy">
          <div class="container">
@@ -273,21 +229,26 @@
                <div class="col-md-12">
                   <div class="full center">
                      <ul class="social_icon">
-                        <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+                        <li><a href="https://www.instagram.com/homis_makeover/" target="_blank"><i class="fa fa-instagram"></i> homis_makeover</a></li>
+                        <!-- <li><a href="#"><i class="fa fa-youtube-play"></i></a></li> -->
                      </ul>
                   </div>
                   <div class="full text_align_center">
-                     <p>© 2020 All Rights Reserved. <a href="https://html.design">html.design</a></p>
+                     <p>© 2023 All Rights Reserved. Homis Makeover</p>
                   </div>
                </div>
             </div>
          </div>
       </div>
       <!-- end cpy -->
+
+      <a  class="whats-app" href="https://wa.link/qepe3h" target="_blank">
+         <i class="fa fa-whatsapp my-float"></i>
+     </a>
+
       <!-- jQuery (necessary for Bootstrap's JavaScript) -->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
